--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
                     <div class="percent"></div>
                 </div>
             </div>
+            <div class="aboutskills">
+                <h3 class="title">Projects</h3>
+                <div class="box">
+                    <span>Assignment1</span>
+                    <span class="text"><a href="https://github.com/pavithraposa/assignment1">Projectlink</a></span>
+                </div>
+                
+            </div>
         </div>
     </div>
     
